# rasterflow

./: .gitignore  README.md  config.vala.in  cross-win64.txt  io.flatscrew.RasterFlow.gschema.xml  io.flatscrew.RasterFlow.yml  meson.build  meson_options.txt  package-flatpak.sh  package-win64.sh  rasterflow.gresource  rasterflow.gresource.xml  rasterflow.yml  test.graph
.github/: ISSUE_TEMPLATE
.github/workflows/: build-linux.yml  build-macos.yml  build-osx.yml  build-windows.yml
columnview_test/: main.vala  meson.build
data/: io.flatscrew.RasterFlow.desktop  iso_639-2.csv  rasterflow.gresource.xml  stylesheet.css
debian/: changelog  control
gegl-docs-generator/: main.vala  meson.build  template.md
gegl_test/: check  check.c
graphs/: aaaaa.graph  add.graph  bleble.graph  color-overlay.graph  combo.graph  compose.graph  compositor.graph  cosmos.graph  crashtest.graph  displayimage.graph  error.graph  filesrc-with-audio.graph  gegltest1.graph  gstwithgegl.graph  lens-blur.graph  maskmap.graph  maze.graph  maze2.graph  noise.graph  normal.graph  pack.graph  pixbuf.graph  pixelize.graph  plasma.graph  red-eyes.graph  seamless-tile.graph  sepia.graph  test.graph  value-invert.graph  whirl-pinch.graph  youtube-stream.graph
graphs/operations/: add.graph  alien-map.graph  alpha-clip.graph  beaver-weave.graph  bloom.graph  box-blur.graph  brightness-contrast.graph  cartoon.graph  channel-mixer.graph  clear.graph  color-burn.graph  color-enhance.graph  color-exchange.graph  color-rotate.graph  color-temperature.graph  color-to-alpha.graph  color-warp.graph  component-extract.graph  contrast-curve.graph  convert-format.graph  crop.graph  cubism.graph  engrave.graph  exposure.graph  focus-blur.graph  gaussian-blur.graph  grid.graph  hue-chroma.graph  invert-gamma.graph  invert-linear.graph  lb-bokeh.graph  lens-distortion.graph  levels.graph  mean-curvature-blur.graph  median-blur.graph  mirrors.graph  mono-mixer.graph  mosaic.graph  motion-blur-circular.graph  motion-blur-linear.graph  (+24 more)
graphs/user-guide/: quickstart.graph
gst_test/: main  main.vala  meson.build
include/: gegl_wrapper.h  windows_window_size.h
jhbuild/: jhbuildrc  m4-apple-clang.patch  rasterflow.modules
linux-beaver-gegl-plugins/: meson.build  weaves.c
osx-bundle/: Info-RasterFlow.plist  RasterFlow.bundle
spinner-test/: main.vala  meson.build
src/: add_graph_property_popover.vala  application_settings.vala  canvas_display_node.vala  canvas_graph.vala  canvas_graph_modification_guard.vala  canvas_graph_properties_editor.vala  canvas_graph_property.vala  canvas_graph_property_list.vala  canvas_headerbar.vala  canvas_log_button.vala  canvas_log_window.vala  canvas_logs.vala  canvas_menu_button.vala  canvas_node.vala  canvas_node_action_bar.vala  canvas_node_task.vala  canvas_nodes.vala  canvas_view.vala  collapsible_section.vala  colors.vala  data_drop_handler.vala  environment.vala  main.vala  minimap.vala  panning_scrolled_window.vala  theme_variant_switch.vala  window_geometry.vala  window_shortcuts.vala  zoom_pan_area.vala  zoomable_area.vala
src/about/: about_dialog.vala  shortcuts_window.vala
src/audiovideo/: audio_video_file_data_node.vala  gst_caps_editor.vala  gst_caps_view.vala  gst_element_display_node.vala  gst_element_node.vala  gst_element_overrides.vala  gst_geglfilters.vala  gst_gtk4sink_view.vala  gst_pipeline.vala  gst_pipeline_controls.vala  gst_property_camera_device.vala  gst_property_pad.vala  gst_property_structure.vala  gst_request_element_pad_button.vala  gst_shader_code_editor.vala  gst_structure_list.vala  gst_structure_properties.vala  plugin.vala
src/data/: data_details_panel.vala  data_display_view.vala  data_node_chooser.vala  data_properties_editor.vala  data_properties_toggle.vala  data_property.vala  data_property_factory.vala  data_property_file_location.vala  file_origin_node_chooser.vala  file_origin_node_factory.vala  node_data.vala  scale_entry.vala  title_bar.vala
src/gegl/: gegl_wrapper.c
src/guard/: extractor.vala  frame.vala  printer.vala  stacktrace.vala
src/history/: history_action.vala  history_action_stack.vala  history_buttons_widget.vala  history_of_changes.vala  move_node_action.vala  remove_node_action.vala
src/history/action/: add_graph_property_action.vala  add_node_action.vala  add_property_node_action.vala  change_node_color_action.vala  change_property_action.vala  composite_action.vala  link_nodes_action.vala  move_node_action.vala  remove_graph_property_action.vala  remove_node_action.vala  remove_property_node_action.vala  resize_node_action.vala  toggle_expander_action.vala  unlink_nodes_action.vala
src/image/: babl_format_property.vala  color_prober.vala  color_property.vala  gegl_file_load_title.vala  gegl_node_operation_view.vala  gegl_operation_display_node.vala  gegl_operation_node.vala  gegl_operation_overrides.vala  gegl_operation_property_sink.vala  gegl_title_overrides.vala  gegl_xml_file_node.vala  image_data_node.vala  image_external_window.vala  image_file_data_node.vala  image_file_information.vala  image_ocr_node.vala  image_processing_realtime_mode_switch.vala  image_resize_node.vala  image_viewer.vala  plugin.vala  window_geometry.vala
src/image/gxml/: gxml_export.vala  gxml_export_import_buttons.vala
src/image/history/: gegl_node_property_control_released_action.vala  gegl_node_property_control_taken_action.vala
src/image/windows/: windows_window_size.c
src/pdf/: extract_page_as_image_node.vala  pdf_file_data_node.vala  pdf_viewer.vala  plugin.vala
src/plugin/: plugin_contribution.vala  plugin_loader.vala
src/property/: canvas_property_bridge.vala  canvas_property_node.vala
src/serialize/: canvas_deserializer.vala  canvas_serializer.vala  json_deserializer.vala  json_serializer.vala
src/text/: plugin.vala  text_node.vala
tesseract_wrapper/: meson.build
tesseract_wrapper/src/: wrapper.cpp  wrapper.h
tesseract_wrapper/vapi/: tesseract-wrapper.vapi
vapi/: babl-0.1.deps  babl-0.1.vapi  gegl-0.4.vapi  gegl_wrapper.vapi  windows_window_size.vapi
windows_installer/: installer.iss
